--- a/views/showProducts.ejs
+++ b/views/showProducts.ejs
@@ -15,17 +15,12 @@
         <div class="row">
           <div class="col-sm-12 col-md-4 col-lg-4 col-xl-4">
             <h3><b>Registro de productos</b></h3>
-            <br />
+            <br>
             <div class="mb-3">
               <label for="text" class="form-label"><b>Seleccione la categoria del producto a añadir</b></label>
             </div>
 
-            <select
-              class="form-select"
-              aria-label="Seleccione una categoria"
-              id="categoria"
-              required
-            >
+            <select class="form-select" aria-label="Seleccione una categoria" id="categoria" required>
               <option value="0">Seleccione una categoria</option>
 
               <% if ( Categoria == 'Calzado') { %>
@@ -44,7 +39,7 @@
               <option value="4" selected>Electrodomesticos</option>
               <% } else { %>
               <option value="4">Electrodomesticos</option>
-              <% } %> <% if ( Categoria == 'Productos_Plasticos') { %>
+              <% } %> <% if ( Categoria == 'Productos_Plasticos' ||  Categoria == 'Productos Plasticos' ) { %>
               <option value="5" selected>Productos Plasticos</option>
               <% } else { %>
               <option value="5">Productos Plasticos</option>
@@ -54,144 +49,59 @@
             <form action="/AddProduct" method="post" class="row g-3 py-3">
               <div class="col-md-6">
                 <label for="Marca" id="Marcalb" class="form-label">Marca</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="Marca"
-                  name="Marca"
-                  required
-                />
-                <input
-                  type="text"
-                  class="form-control"
-                  id="Categoria_Prod"
-                  name="Categoria_Prod"
-                  hidden
-                />
+                <input type="text" class="form-control" id="Marca" name="Marca" required/>
+                <input type="text" class="form-control" id="Categoria_Prod" name="Categoria_Prod" hidden/>
               </div>
 
               <div class="col-md-6">
-                <label for="Existencia" class="form-label"
-                  >Existencia del producto</label
-                >
-                <input
-                  type="number"
-                  class="form-control"
-                  id="Existencia"
-                  name="Existencia"
-                />
+                <label for="Existencia" class="form-label">Existencia del producto</label>
+                <input type="number" class="form-control" id="Existencia" name="Existencia"/>
               </div>
 
               <div class="col-md-6">
-                <label for="Precio" class="form-label"
-                  >Precio del Producto</label
-                >
-                <input
-                  type="number"
-                  class="form-control"
-                  id="Precio"
-                  name="Precio"
-                  required
-                />
+                <label for="Precio" class="form-label">Precio del Producto</label>
+                <input type="number" class="form-control" id="Precio" name="Precio" required/>
               </div>
 
               <div class="col-md-6">
                 <label for="Color" class="form-label">Color del producto</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="Color"
-                  name="Color"
-                  required
-                />
+                <input type="text" class="form-control" id="Color" name="Color" required/>
               </div>
 
               <div class="col-md-6">
                 <label for="Tipo" class="form-label">Tipo de producto</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="Tipo"
-                  name="Tipo"
-                  required
-                />
+                <input type="text" class="form-control" id="Tipo" name="Tipo" required/>
               </div>
 
               <div class="col-md-6">
-                <label for="FechaIngreso" class="form-label"
-                  >Fecha de Ingreso</label
-                >
-                <input
-                  type="date"
-                  class="form-control"
-                  id="FechaIngreso"
-                  name="Fecha"
-                  required
-                />
+                <label for="FechaIngreso" class="form-label">Fecha de Ingreso</label>
+                <input type="date" class="form-control" id="FechaIngreso" name="Fecha" required/>
               </div>
 
               <div class="col-md-6">
-                <label for="Talla" id="Tallalb" class="form-label"
-                  >Talla del producto</label
-                >
-                <input
-                  type="text"
-                  class="form-control"
-                  id="Talla"
-                  name="Talla"
-                />
+                <label for="Talla" id="Tallalb" class="form-label">Talla del producto</label>
+                <input type="text" class="form-control" id="Talla" name="Talla"/>
               </div>
 
               <div class="col-md-6">
-                <label for="Modelo" id="Modelolb" class="form-label"
-                  >Modelo del producto</label
-                >
-                <input
-                  type="text"
-                  class="form-control"
-                  id="Modelo"
-                  name="Modelo"
-                />
+                <label for="Modelo" id="Modelolb" class="form-label">Modelo del producto</label>
+                <input type="text" class="form-control" id="Modelo" name="Modelo"/>
               </div>
 
               <div class="col-md-6">
-                <label
-                  for="Clasificacion"
-                  id="Clasificacionlb"
-                  class="form-label"
-                  >Clasificacion</label
-                >
-                <input
-                  type="text"
-                  class="form-control"
-                  id="Clasificacion"
-                  name="Clasificacion"
-                />
+                <label for="Clasificacion" id="Clasificacionlb" class="form-label" >Clasificacion</label>
+                <input type="text" class="form-control" id="Clasificacion" name="Clasificacion"/>
 
-                <label for="Dimensiones" id="Dimensioneslb" class="form-label"
-                  >Dimensiones</label
-                >
-                <input
-                  type="text"
-                  class="form-control"
-                  id="Dimensiones"
-                  name="Dimensiones"
-                />
+                <label for="Dimensiones" id="Dimensioneslb" class="form-label">Dimensiones</label>
+                <input type="text" class="form-control" id="Dimensiones" name="Dimensiones"/>
 
-                <label for="UnidadMedida" id="UnidadMedidalb" class="form-label"
-                  >Unidad de Medida</label
-                >
-                <input
-                  type="text"
-                  class="form-control"
-                  id="UnidadMedida"
-                  name="Unidad_Medida"
-                />
+                <label for="UnidadMedida" id="UnidadMedidalb" class="form-label">Unidad de Medida</label>
+                <input type="text" class="form-control" id="UnidadMedida" name="Unidad_Medida"/>
               </div>
 
               <div class="d-grid gap-2">
-                <Button type="submit" class="btn btn-success">Guardar</Button>
-                <Button class="btn btn-secondary">Limpiar Campos</Button>
+                <button title="Guardar Producto" type="submit" class="btn btn-success">Guardar Producto</button>
+                <button title="Limpiar Campos" class="btn btn-secondary" onclick="Limpiar()">Limpiar Campos</button>
               </div>
             </form>
           </div>
@@ -208,8 +118,11 @@
                 <h2><b>Listado de Electrodomesticos</b></h2>
             <% } else if ( Categoria == 'Productos_Plasticos') { %>
                 <h2><b>Listado de Productos Plasticos</b></h2>
+            <% } else if ( Categoria == 'Prendas de Vestir') { %>
+                <h2><b>Listado de Prendas de Vestir</b></h2>
+            <% } else if ( Categoria == 'Productos Plasticos') { %>
+                  <h2><b>Listado de Productos Plasticos</b></h2>
             <% } %>
-
 
 
             <table class="table primary">
@@ -223,18 +136,19 @@
                 </tr>
               </thead>
 
-              <% if ( Producto != null) { %> 
-                    <% Producto[0].forEach((product) => { %>
+
+                    <% Producto.forEach((product) => { %>
                         <tbody>
                             <tr>
-                            <td class="centrado"><%= product.Productos %></td>
-                            <td class="centrado"><%= product.Precio %></td>
-                            <td class="centrado"><%= product.Existencia %></td>
+                            <td class="centrado"><%= product.Descripcion %></td>
+                            <td class="centrado">C$ <%= product.Precio %></td>
+                            <td class="centrado"><%= product.Existencia %> unidades</td>
                             <td class="centrado"><%= product.Fecha_Ingreso %></td>
 
                             <td>
                                 <!-- Botones de acciones -->
-                                <a href="/EditProduct/<%= Categoria %>/Producto/<%= product.Id_Producto %>/Cat/<%= product.IdCat %>" class="btn btn-success mb-1" title="Actualizar"><svg
+                                <a href="/EditProduct/<%= product.Categoria %>/p/<%= product.Id_Producto %>" class="btn btn-success mb-1" title="Actualizar">
+                                  <svg
                                     xmlns="http://www.w3.org/2000/svg"
                                     width="16"
                                     height="16"
@@ -245,33 +159,19 @@
                                     <path
                                     fill-rule="evenodd"
                                     d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"
-                                    /></svg
-                                ></a>
-                                <a
-                                href="#"
-                                class="btn btn-danger"
-                                title="Eliminar"
-                                onclick="confirmDelete('<%= Categoria %>','<%= product.Id_Producto %>','<%= product.IdCat %>')"
-                                ><svg
-                                    xmlns="http://www.w3.org/2000/svg"
-                                    width="16"
-                                    height="16"
-                                    fill="currentColor"
-                                    class="bi bi-trash"
-                                    viewBox="0 0 16 16"
-                                >
-                                    <path
-                                    d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"
-                                    />
-                                    <path
-                                    d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"
-                                    /></svg
-                                ></a>
+                                    /></svg>
+                                </a>
+                                <a href="#" class="btn btn-danger" title="Eliminar Producto" onclick="confirmDelete('<%= product.Id_Producto %>', '<%= Categoria %>')">
+                                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"class="bi bi-trash" viewBox="0 0 16 16">
+                                    <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
+                                    <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"/>
+                                  </svg>
+                                </a>
                             </td>
                             </tr>
                         </tbody>
                     <% }) %> 
-              <% } %>
+
             </table>
           </div>
         </div>
@@ -291,7 +191,7 @@
         showConfirmButton: true,
         timer: false,
       }).then(() => {
-        window.location = "/<%= ruta %>";
+        window.location = '/ShowProducts/<%= cat %>'
       });
     </script>
     <% } %>
