Actualización de abonos, historial de abonos único de cliente, detalles de una venta

--- a/views/ventas.ejs
+++ b/views/ventas.ejs
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="resources/css/style.css" />
   </head>
   <body>
-    <%- include('sidebar.ejs') %> 
+    <%- include('sidebar.ejs') %>
 
     <section class="home-section">
       <div class="Container">
@@ -684,8 +684,8 @@
                             <button
                               type="button"
                               class="btn btn-success info-venta"
-                              data-tipo="credito"
                               title="Informacion de la venta"
+                              onclick="mostrarDetallesVenta()"
                             >
                               <i class="fa-solid fa-money-check-dollar"></i>
                             </button>
@@ -708,8 +708,8 @@
                             <button
                               type="button"
                               class="btn btn-success info-venta"
-                              data-tipo="contado"
                               title="Informacion de la venta"
+                              onclick="mostrarDetallesVenta()"
                             >
                               <i class="fa-solid fa-money-check-dollar"></i>
                             </button>
@@ -783,183 +783,88 @@
                 </div>
               </div>
 
-              <!-- Panel de información de venta al credito
               <div
-                id="panelDetalleVentasContado"
+                id="panelDetalleVentas"
                 class="panel-flotante"
                 style="display: none"
               >
                 <div class="panel-content">
-                  <h4>Historial de abonos</h4>
-
+                  <h4>Detalles de venta</h4>
+                  <nav class="navbar bg-body-tertiary"></nav>
                   <div style="max-height: 300px; overflow-y: auto">
-                    <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8">
-                      <table class="table" id="tablacliente">
-                        <thead>
-                          <tr>
-                            <th class="centrado">Cliente</th>
-                            <th class="centrado">Vendedor</th>
-                            <th></th>
-                            <th class="centrado">Fecha</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr>
-                            <td class="centrado">Mateo</td>
-                            <td class="centrado">Jonathan</td>
-                            <td></td>
-                            <td class="centrado">13/04/2024</td>
-                          </tr>
+                    <div class="row">
+                      <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
+                        <table class="table" id="tablacliente">
                           <thead>
                             <tr>
-                              <th class="centrado">Producto</th>
-                              <th class="centrado">Cantidad Producto</th>
-                              <th class="centrado">Precio</th>
-                              <th class="centrado">Accion</th>
+                              <th class="centrado">Cliente</th>
+                              <th class="centrado">Vendedor</th>
+                              <th></th>
+                              <th class="centrado">Fecha</th>
                             </tr>
                           </thead>
-                        </tbody>
+                          <tbody>
+                            <tr>
+                              <td class="centrado">Mateo</td>
+                              <td class="centrado">Jonathan</td>
+                              <td></td>
+                              <td class="centrado">13/04/2024</td>
+                            </tr>
+                            <thead>
+                              <tr>
+                                <th class="centrado">Producto</th>
+                                <th class="centrado">
+                                  Cantidad Producto
+                                </th>
+                                <th class="centrado">Precio</th>
+                                
+                              </tr>
+                            </thead>
+                          </tbody>
 
-                        <tbody>
-                          <tr>
-                            <td class="centrado">Zapatos</td>
-                            <td class="centrado">3</td>
-                            <td class="centrado">150 C$</td>
-                            <td class="centrado">
-                              <div class="centrado">
-                                <div
-                                  class="d-flex justify-content-center align-items-center"
-                                >
-                                  <input
-                                    type="number"
-                                    class="form-control form-control-sm me-2"
-                                    style="width: 3rem"
-                                  />
-                                  <button
-                                    type="button"
-                                    class="btn btn-danger px-3"
-                                    title="Eliminar"
+                          <tbody>
+                            <tr>
+                              <td class="centrado">Zapatos</td>
+                              <td class="centrado">3</td>
+                              <td class="centrado">150 C$</td>
+                              <td class="centrado">
+                                <div class="centrado">
+                                  <div
+                                    class="d-flex justify-content-center align-items-center"
                                   >
-                                    <i class="fa-solid fa-trash"></i>
-                                  </button>
+                                  </div>
                                 </div>
-                              </div>
-                            </td>
-                          </tr>
-                        </tbody>
-                        <thead>
-                          <th></th>
-                          <th></th>
-                          <th></th>
-                          <th class="centrado">Cantidad Total</th>
-                        </thead>
-                        <tbody>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td class="centrado">450 C$</td>
-                        </tbody>
-                      </table>
+                              </td>
+                            </tr>
+                          </tbody>
+                          <thead>
+                            <th></th>
+                            <th></th>
+                            <th class="centrado">Cantidad Total</th>
+                            <th></th>
+                            
+                          </thead>
+                          <tbody>
+                            <td></td>
+                            <td></td>
+                            <td class="centrado">450 C$</td>
+                            <td></td>
+                            
+                          </tbody>
+                        </table>
+                      </div>
+                      
                     </div>
                   </div>
                   <button
                     type="button"
                     class="btn btn-danger"
-                    onclick="cerrarPanelVentaContado()"
+                    onclick="cerrarDetallesVenta()"
                   >
                     Cerrar
                   </button>
                 </div>
-              </div> -->
-
-              <!-- Panel de información de venta al contado 
-              <div
-                id="panelDetalleVentasContado"
-                class="panel-flotante"
-                style="display: none"
-              >
-                <div class="panel-content">
-                  <h4>Historial de abonos</h4>
-
-                  <div style="max-height: 300px; overflow-y: auto">
-                    <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8">
-                      <table class="table" id="tablacliente">
-                        <thead>
-                          <tr>
-                            <th class="centrado">Cliente</th>
-                            <th class="centrado">Vendedor</th>
-                            <th></th>
-                            <th class="centrado">Fecha</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr>
-                            <td class="centrado">Mateo</td>
-                            <td class="centrado">Jonathan</td>
-                            <td></td>
-                            <td class="centrado">13/04/2024</td>
-                          </tr>
-                          <thead>
-                            <tr>
-                              <th class="centrado">Producto</th>
-                              <th class="centrado">Cantidad Producto</th>
-                              <th class="centrado">Precio</th>
-                              <th class="centrado">Accion</th>
-                            </tr>
-                          </thead>
-                        </tbody>
-
-                        <tbody>
-                          <tr>
-                            <td class="centrado">Zapatos</td>
-                            <td class="centrado">3</td>
-                            <td class="centrado">150 C$</td>
-                            <td class="centrado">
-                              <div class="centrado">
-                                <div
-                                  class="d-flex justify-content-center align-items-center"
-                                >
-                                  <input
-                                    type="number"
-                                    class="form-control form-control-sm me-2"
-                                    style="width: 3rem"
-                                  />
-                                  <button
-                                    type="button"
-                                    class="btn btn-danger px-3"
-                                    title="Eliminar"
-                                  >
-                                    <i class="fa-solid fa-trash"></i>
-                                  </button>
-                                </div>
-                              </div>
-                            </td>
-                          </tr>
-                        </tbody>
-                        <thead>
-                          <th></th>
-                          <th></th>
-                          <th></th>
-                          <th class="centrado">Cantidad Total</th>
-                        </thead>
-                        <tbody>
-                          <td></td>
-                          <td></td>
-                          <td></td>
-                          <td class="centrado">450 C$</td>
-                        </tbody>
-                      </table>
-                    </div>
-                  </div>
-                  <button
-                    type="button"
-                    class="btn btn-danger"
-                    onclick="cerrarPanelHistorialAbonos()"
-                  >
-                    Cerrar
-                  </button>
-                </div> 
-              </div>-->
+              </div>
             </div>
           </div>
         </div>
